--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_geometry
-	base = afb2582
-	trimbase = 
+	base = acc2d12
+	trimbase = afb2582
 	parent = upstream
 	previous = 49ed6ec
