--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge
-	base = db86acd
-	trimbase = 
+	base = d528ee7
+	trimbase = db86acd
 	parent = upstream
 	previous = 49ed6ec
