--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_opencv
-	base = 770a44d
-	trimbase = 
+	base = 42b913f
+	trimbase = 770a44d
 	parent = upstream
 	previous = 49ed6ec
