--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_geometry
-	base = 1ac46ce
-	trimbase = 
+	base = 261ea30
+	trimbase = 1ac46ce
 	parent = upstream
 	previous = 49ed6ec
