--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge
-	base = 37b41ed
-	trimbase = 
+	base = 8133373
+	trimbase = 37b41ed
 	parent = upstream
 	previous = 49ed6ec
