--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_opencv
-	base = 096a6c5
-	trimbase = 
+	base = 5b675c1
+	trimbase = 096a6c5
 	parent = upstream
 	previous = 49ed6ec
