Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.12.5-0": ["Sun Nov 05 2017", "Vincent Rabaud", "vincent.rabaud@gmail.com"], "1.12.6-0": ["Sat Nov 11 2017", "Vincent Rabaud", "vincent.rabaud@gmail.com"], "1.12.4-0": ["Mon Mar 13 2017", "Vincent Rabaud", "vincent.rabaud@gmail.com"]}
+{"1.12.5-0": ["Sun Nov 05 2017", "Vincent Rabaud", "vincent.rabaud@gmail.com"], "1.12.6-0": ["Sat Nov 11 2017", "Vincent Rabaud", "vincent.rabaud@gmail.com"], "1.12.4-0": ["Mon Mar 13 2017", "Vincent Rabaud", "vincent.rabaud@gmail.com"], "1.12.7-0": ["Sun Nov 12 2017", "Vincent Rabaud", "vincent.rabaud@gmail.com"]}
