--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_geometry
-	base = 7b2c56d
-	trimbase = 
+	base = cefc1cd
+	trimbase = 7b2c56d
 	parent = upstream
 	previous = 0d95186
