--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge
-	base = 0669e52
-	trimbase = 
+	base = b401cd7
+	trimbase = 0669e52
 	parent = upstream
 	previous = 0d95186
