--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_opencv
-	base = 0e32a4f
-	trimbase = 
+	base = 9b72f6e
+	trimbase = 0e32a4f
 	parent = upstream
 	previous = 0d95186
