--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_geometry
-	base = 35528dd
-	trimbase = 
+	base = 8e4e7df
+	trimbase = 35528dd
 	parent = upstream
 	previous = 0d95186
