--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge
-	base = feb1669
-	trimbase = 
+	base = 4889bd4
+	trimbase = feb1669
 	parent = upstream
 	previous = 0d95186
