--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_opencv
-	base = b4977d5
-	trimbase = 
+	base = 95d35b4
+	trimbase = b4977d5
 	parent = upstream
 	previous = 0d95186
