--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7fa5ae9c
-	trimbase = 
+	trim = image_geometry
+	base = b84da6f5
+	trimbase = 7fa5ae9c
 	parent = upstream
 	previous = 67e67257
