--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b19e9cc9
-	trimbase = 
+	trim = cv_bridge
+	base = 3af2a46f
+	trimbase = b19e9cc9
 	parent = upstream
 	previous = 67e67257
