--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c9ff6624
-	trimbase = 
+	trim = vision_opencv
+	base = 442c4b91
+	trimbase = c9ff6624
 	parent = upstream
 	previous = 67e67257
