--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4c309709
+	base = 11bae3df
 	trimbase = 
 	parent = debian/melodic/image_geometry
-	previous = 
+	previous = 4c309709
