--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c66ef51
+	base = 4b9e5760
 	trimbase = 
 	parent = debian/melodic/cv_bridge
-	previous = 
+	previous = 3c66ef51
