--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ca6022e0
+	base = f7715760
 	trimbase = 
 	parent = debian/melodic/vision_opencv
-	previous = 
+	previous = ca6022e0
