--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 60e5615d
+	base = 3c6ea2ea
 	trimbase = 
 	parent = debian/melodic/image_geometry
-	previous = 
+	previous = 60e5615d
