--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6c488be0
+	base = b49030d3
 	trimbase = 
 	parent = debian/melodic/cv_bridge
-	previous = 
+	previous = 6c488be0
