--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 99183491
+	base = 75292283
 	trimbase = 
 	parent = debian/melodic/vision_opencv
-	previous = 
+	previous = 99183491
