--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b84da6f5
+	base = f3c655ec
 	trimbase = 
 	parent = release/melodic/image_geometry
-	previous = 
+	previous = b84da6f5
