--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 813a37d1
+	base = d0e90da0
 	trimbase = 
 	parent = rpm/melodic/image_geometry
-	previous = 
+	previous = 813a37d1
