--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3af2a46f
+	base = b9caa625
 	trimbase = 
 	parent = release/melodic/cv_bridge
-	previous = 
+	previous = 3af2a46f
