--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf851aab
+	base = 725fbe3b
 	trimbase = 
 	parent = rpm/melodic/cv_bridge
-	previous = 
+	previous = bf851aab
