--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 442c4b91
+	base = 97831e43
 	trimbase = 
 	parent = release/melodic/vision_opencv
-	previous = 
+	previous = 442c4b91
