--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9c8a7803
+	base = 333dde85
 	trimbase = 
 	parent = rpm/melodic/vision_opencv
-	previous = 
+	previous = 9c8a7803
