--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = adfff27b
-	trimbase = 
+	trim = image_geometry
+	base = c222e849
+	trimbase = adfff27b
 	parent = upstream
 	previous = dcf3280e
