--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 51acf885
-	trimbase = 
+	trim = cv_bridge
+	base = 19c33930
+	trimbase = 51acf885
 	parent = upstream
 	previous = dcf3280e
