--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bc547033
-	trimbase = 
+	trim = vision_opencv
+	base = cd66a758
+	trimbase = bc547033
 	parent = upstream
 	previous = dcf3280e
