--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05c44b38
+	base = ee9fb814
 	trimbase = 
 	parent = debian/noetic/cv_bridge
-	previous = 
+	previous = 05c44b38
