--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c222e849
+	base = 496d8830
 	trimbase = 
 	parent = release/noetic/image_geometry
-	previous = 
+	previous = c222e849
