--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e808dc30
+	base = 9880b7e0
 	trimbase = 
 	parent = debian/noetic/image_geometry
-	previous = 
+	previous = e808dc30
