--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f4a17475
+	base = 46b67576
 	trimbase = 
 	parent = debian/noetic/vision_opencv
-	previous = 
+	previous = f4a17475
