--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1b6c32c1
+	base = 926c4281
 	trimbase = 
 	parent = debian/noetic/cv_bridge
-	previous = 
+	previous = 1b6c32c1
