--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5fbae31a
+	base = 5b2a6655
 	trimbase = 
 	parent = debian/noetic/image_geometry
-	previous = 
+	previous = 5fbae31a
