--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9dae77d8
+	base = ca51c3aa
 	trimbase = 
 	parent = debian/noetic/vision_opencv
-	previous = 
+	previous = 9dae77d8
