--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 19c33930
+	base = 0aa28087
 	trimbase = 
 	parent = release/noetic/cv_bridge
-	previous = 
+	previous = 19c33930
