--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 51b120f0
+	base = efeeed52
 	trimbase = 
 	parent = rpm/noetic/cv_bridge
-	previous = 
+	previous = 51b120f0
