--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 13b9733b
+	base = b6ba4de8
 	trimbase = 
 	parent = rpm/noetic/image_geometry
-	previous = 
+	previous = 13b9733b
