--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cd66a758
+	base = a3904dd5
 	trimbase = 
 	parent = release/noetic/vision_opencv
-	previous = 
+	previous = cd66a758
