--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7dcdef4b
+	base = 5195233a
 	trimbase = 
 	parent = rpm/noetic/vision_opencv
-	previous = 
+	previous = 7dcdef4b
