--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_geometry
-	base = bcf096e7
-	trimbase = 
+	base = e9c6e559
+	trimbase = bcf096e7
 	parent = upstream
 	previous = f404dda7
