--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge
-	base = 04157f10
-	trimbase = 
+	base = a84187ba
+	trimbase = 04157f10
 	parent = upstream
 	previous = f404dda7
