--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_opencv
-	base = f194d6f3
-	trimbase = 
+	base = 64383272
+	trimbase = f194d6f3
 	parent = upstream
 	previous = f404dda7
