--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.14.0-1": ["Mon Apr 06 2020", "Vincent Rabaud", "vincent.rabaud@gmail.com"]}
+{"1.14.0-1": ["Mon Apr 06 2020", "Vincent Rabaud", "vincent.rabaud@gmail.com"], "1.15.0-1": ["Tue May 19 2020", "Vincent Rabaud", "vincent.rabaud@gmail.com"]}
