--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge
-	base = c44c305f
-	trimbase = 
+	base = b2d15724
+	trimbase = c44c305f
 	parent = upstream
 	previous = fe9944a2
