--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = vision_opencv
-	base = bc502ac1
-	trimbase = 
+	base = 5f9c7f4e
+	trimbase = bc502ac1
 	parent = upstream
 	previous = fe9944a2
