--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = image_geometry
-	base = f08201cc
-	trimbase = 
+	base = 28bea5c3
+	trimbase = f08201cc
 	parent = upstream
 	previous = fe9944a2
