--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6c4299b3
+	base = 4d4318ee
 	trimbase = 
 	parent = release/melodic/cv_bridge_python3
-	previous = 
+	previous = 6c4299b3
