--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 42e81b24
+	base = 7e84dafd
 	trimbase = 
 	parent = debian/melodic/cv_bridge_python3
-	previous = 
+	previous = 42e81b24
