--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge_python3
-	base = 3a33979f
-	trimbase = 
+	base = 738132f8
+	trimbase = 3a33979f
 	parent = upstream
 	previous = de15891a
