--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cv_bridge_python3
 	base = 6c4299b3
-	trimbase = 2de1745a
+	trimbase = 
 	parent = upstream
 	previous = 8b115249
