--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package format="2">
   <name>cv_bridge_python3</name>
-  <version>1.13.1</version>
+  <version>1.13.2</version>
   <description>
     This contains CvBridge, which converts between ROS
     Image messages and OpenCV images.
@@ -24,6 +24,7 @@
   </export>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
 
   <build_depend>boost</build_depend>
   <build_depend>libopencv-dev</build_depend>
